update locators